--- a/vignettes/model-fairness.Rmd
+++ b/vignettes/model-fairness.Rmd
@@ -90,6 +90,8 @@ the African American, Asian, and Hispanic groups in comparison to the reference
 group (Caucasian). See Pessach & Shmueli (2022) for a more detailed explanation
 of these metrics.
 
+&nbsp;
+
 1. **Demographic parity (Statistical parity)**: Compares the number of positive
   predictions (e.g., reoffenders) between each ethnic group and the reference
   group. Note that, since demographic parity is not a proportion, statistical
@@ -112,7 +114,7 @@ model_fairness(
 )
     ```
 
-    *Interpretation:*
+    ***Interpretation:***
     - *African American*: The parity ratio for African Americans compared to
       Caucasians is 2.7961, indicating that there are nearly three times more
       African Americans predicted as reoffenders in these data by the algorithm
@@ -123,6 +125,8 @@ model_fairness(
     - *Hispanic*: The ratio for Hispanics is 0.22173, meaning that there are
       about five times less Hispanics predicted as reoffenders in these data
       than that there are Caucasians.
+
+&nbsp;
 
 2. **Proportional parity (Disparate impact)**: Compares the proportion of
   positive predictions of each ethnic group with that in the reference group.
@@ -146,7 +150,7 @@ model_fairness(
 )
     ```
 
-    *Interpretation:*
+    ***Interpretation:***
     - *African American*: The ratio of true positive rates (TPRs) for African
       Americans compared to Caucasians is 1.8521. This indicates that the TPR
       for African Americans is approximately 1.85 times higher than for
@@ -204,6 +208,8 @@ print(x)
 plot(x, type = "posterior")
     ```
 
+&nbsp;
+
 3. **Predictive rate parity (Equalized odds)**: Compares the overall positive
 prediction rates (e.g., reoffender prediction) of different ethnic groups with
 the reference group.
@@ -224,7 +230,7 @@ model_fairness(
 )
     ```
 
-    *Interpretation:*
+    ***Interpretation:***
     - *African American*: The predictive rate parity ratio for African Americans
       is 1.1522. This suggests that the overall positive prediction rate for
       African Americans is approximately 1.15 times higher than for Caucasians.
@@ -237,6 +243,8 @@ model_fairness(
       suggesting their overall positive prediction rate is very close to that of
       the reference group (Caucasians). This indicates relatively fair treatment
       in the algorithm's overall positive predictions.
+
+&nbsp;
 
 4. **Accuracy parity**: Compares the accuracy of each ethnic group's predictions
 with the reference group.
@@ -257,7 +265,7 @@ model_fairness(
 )
     ```
 
-    *Interpretation:*
+    ***Interpretation:***
     - African American: The accuracy parity ratio for African Americans is
       1.021, suggesting their accuracy is very similar to the reference group
       (Caucasians). This indicates fair treatment concerning overall accuracy.
@@ -267,6 +275,8 @@ model_fairness(
     - *Hispanic*: The ratio for Hispanics is 1.0351, suggesting their accuracy
       is slightly higher than for Caucasians, indicating potential favoritism in
       overall accuracy.
+
+&nbsp;
 
 5. **False negative rate parity (Treatment equality)**: Compares the false
 negative rates (e.g., for reoffenders) of each ethnic group with the reference
@@ -288,7 +298,7 @@ model_fairness(
 )
     ```
 
-    *Interpretation:*
+    ***Interpretation:***
     - *African American*: The ratio of false negative rates (FNRs) for African
       Americans compared to Caucasians is 0.46866. A value lower than 1 suggests
       that African Americans are less likely to be falsely classified as
@@ -300,6 +310,8 @@ model_fairness(
     - *Hispanic*: The FNR parity ratio for Hispanics is 1.0121, indicating
       relatively similar rates as the reference group (Caucasians), suggesting
       fair treatment in this aspect.
+
+&nbsp;
 
 6. **False positive rate parity**: Compares the false positive rates (e.g., for
 non-reoffenders) of each ethnic group with the reference group.
@@ -320,7 +332,7 @@ model_fairness(
 )
     ```
 
-    *Interpretation:*
+    ***Interpretation:***
     - *African American*: The false positive rate parity ratio for African
       Americans is 1.8739. This indicates that African Americans are
       approximately 1.87 times more likely to be falsely predicted as
@@ -333,6 +345,8 @@ model_fairness(
       suggesting they are less likely to be falsely predicted as reoffenders
       compared to Caucasians. This indicates potential fair treatment of
       Hispanics in false positive predictions.
+
+&nbsp;
 
 7. **True positive rate parity (Equal opportunity)**: Compares the true positive
 rates (e.g., for reoffenders) of each ethnic group with the reference group.
@@ -353,7 +367,7 @@ model_fairness(
 )
     ```
 
-    *Interpretation:*
+    ***Interpretation:***
     - *African American*: The true positive rate parity ratio for African
       Americans is 1.5943. This indicates that African Americans are
       approximately 1.59 times more likely to be correctly predicted as
@@ -367,6 +381,8 @@ model_fairness(
       suggesting their true positive rate is very close to that of the reference
       group (Caucasians). This indicates relatively fair treatment in the
       algorithm's true positive predictions.
+
+&nbsp;
 
 8. **Negative predicted value parity**: Compares the negative predicted values
 (e.g., for non-reoffenders) of each ethnic group with the reference group.
@@ -387,7 +403,7 @@ model_fairness(
 )
     ```
 
-    *Interpretation:*
+    ***Interpretation:***
     - *African American*: The Negative predicted value (NPV) parity ratio for
       African Americans is 0.98013. A value close to 1 indicates that the NPV
       for African Americans is very similar to the reference group (Caucasians).
@@ -399,6 +415,8 @@ model_fairness(
     - *Hispanic*: The NPV parity ratio for Hispanics is 1.0326, suggesting that
       their NPV is slightly higher than for Caucasians. This indicates potential
       favoritism towards Hispanics in predicting non-reoffenders.
+
+&nbsp;
 
 9. **Specificity parity (True negative rate parity)**: Compares the specificity
 (true negative rate) of each ethnic group with the reference group.
@@ -419,7 +437,7 @@ model_fairness(
 )
     ```
 
-    *Interpretation:*
+    ***Interpretation:***
     - *African American*: The specificity parity ratio for African Americans is
       0.75105. A value lower than 1 indicates that the specificity for African
       Americans is lower than for Caucasians. This suggests potential bias in
