--- a/vignettes/algorithm-auditing.Rmd
+++ b/vignettes/algorithm-auditing.Rmd
@@ -38,13 +38,18 @@ in **jfa**.
 
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 
-The `model_fairness()` function provides a model-agnotic method to asses bias
-in predictive algorithms by computing various fairness metrics based on the
-observed and predicted classes. The function allows for evaluating fairness
-using metrics such as demographic parity, proportional parity, predictive rate
-parity, accuracy parity, false negative rate parity, false positive rate parity,
-true positive rate parity, negative predicted value parity, and specificity
-parity. Moreover, the function tests these metrics for equality.
+The `model_fairnesS()` function aims to assess fairness in algorithmic
+decision-making systems by computing and testing the equality of one of
+several model-agnostic fairness metrics between protected classes based on a
+set of true labels and the predictions of an algorithm. The ratio of these
+metrics between an unpriveleged protected class and a priveleged protected
+class is called parity, and quantifies  relative fairness in the algorithms
+predictions. Available parity metrics include predictive rate parity,
+proportional parity, accuracy parity, false negative rate parity, false
+positive rate parity, true positive rate parity, negative predicted value
+parity, specificity parity, and demographic parity. The function returns an
+object of class `jfaFairness` that can be used with associated
+`summary()` and `plot()` methods.
 
 *Full function with default arguments:*
 
@@ -92,11 +97,5 @@ benchmarks:
 ## References
 
 - Büyük, S. (2023). *Automatic Fairness Criteria and Fair Model Selection for Critical ML Tasks*, Master Thesis, Utrecht University. - [View Online](https://studenttheses.uu.nl/handle/20.500.12932/44225)
-- Calders, T., & Verwer, S. (2010). Three naive Bayes approaches for discrimination-free classification. In *Data Mining and Knowledge Discovery*. Springer Science and Business Media LLC. - [View Online](https://doi.org/10.1007/s10618-010-0190-x)
-- Chouldechova, A. (2017). Fair Prediction with Disparate Impact: A Study of Bias in Recidivism Prediction Instruments. In *Big Data*. Mary Ann Liebert Inc. - [View Online](https://doi.org/10.1089/big.2016.0047)
-- Feldman, M., Friedler, S. A., Moeller, J., Scheidegger, C., & Venkatasubramanian, S. (2015). Certifying and Removing Disparate Impact. In *Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining. - [View Online](https://doi.org/10.1145/2783258.2783311)
-- Fisher, R. A. (1970). *Statistical Methods for Research Workers*. Oliver & Boyd.
 - Friedler, S. A., Scheidegger, C., Venkatasubramanian, S., Choudhary, S., Hamilton, E. P., & Roth, D. (2019). A comparative study of fairness-enhancing interventions in machine learning. In *Proceedings of the Conference on Fairness, Accountability, and Transparency*. - [View Online](https://doi.org/10.1145/3287560.3287589)
-- Jamil, T., Ly, A., Morey, R. D., Love, J., Marsman, M., & Wagenmakers, E. J. (2017). Default "Gunel and Dickey" Bayes factors for contingency tables. \emph{Behavior Research Methods}, 49, 638-652. - [View Online](https://doi.org/10.3758/s13428-016-0739-8)
 - Pessach, D. & Shmueli, E. (2022). A review on fairness in machine learning. *ACM Computing Surveys*, 55(3), 1-44. - [View Online](https://doi.org/10.1145/3494672)
-- Zafar, M. B., Valera, I., Gomez Rodriguez, M., & Gummadi, K. P. (2017). Fairness Beyond Disparate Treatment & Disparate Impact. In *Proceedings of the 26th International Conference on World Wide Web*. - [View Online](https://doi.org/10.1145/3038912.3052660)
